--- a/TheExpanseRPG/MVVM/View/CharacterFinalizationView.xaml
+++ b/TheExpanseRPG/MVVM/View/CharacterFinalizationView.xaml
@@ -401,7 +401,7 @@
 
                         </Grid.ColumnDefinitions>
 
-                        <HeaderedContentControl>
+                        <HeaderedContentControl ToolTip="10 + Dex">
                             <HeaderedContentControl.Header>
                                 <Label Content="Speed" HorizontalContentAlignment="Center" Background="{StaticResource EXPDarkBlueBrush}" Margin="5,0"/>
                             </HeaderedContentControl.Header>
@@ -410,7 +410,7 @@
                             </HeaderedContentControl.Content>
                         </HeaderedContentControl>
 
-                        <HeaderedContentControl Grid.Column="1">
+                        <HeaderedContentControl Grid.Column="1" ToolTip="10 + Dex">
                             <HeaderedContentControl.Header>
                                 <Label Content="Defense" HorizontalContentAlignment="Center" Background="{StaticResource EXPDarkBlueBrush}" Margin="5,0"/>
                             </HeaderedContentControl.Header>
@@ -419,7 +419,7 @@
                             </HeaderedContentControl.Content>
                         </HeaderedContentControl>
 
-                        <HeaderedContentControl Grid.Column="2">
+                        <HeaderedContentControl Grid.Column="2" ToolTip="Constitution">
                             <HeaderedContentControl.Header>
                                 <Label Content="Toughness" HorizontalContentAlignment="Center" Background="{StaticResource EXPDarkBlueBrush}" Margin="5,0"/>
                             </HeaderedContentControl.Header>
@@ -428,7 +428,7 @@
                             </HeaderedContentControl.Content>
                         </HeaderedContentControl>
 
-                        <HeaderedContentControl Grid.Column="3">
+                        <HeaderedContentControl Grid.Column="3" ToolTip="15 + Drive bonus">
                             <HeaderedContentControl.Header>
                                 <Label Content="Fortune" HorizontalContentAlignment="Center" Background="{StaticResource EXPDarkBlueBrush}" Margin="5,0"/>
                             </HeaderedContentControl.Header>
@@ -437,7 +437,7 @@
                             </HeaderedContentControl.Content>
                         </HeaderedContentControl>
 
-                        <HeaderedContentControl Grid.Column="4">
+                        <HeaderedContentControl Grid.Column="4" ToolTip="{Binding IncomeSources}">
                             <HeaderedContentControl.Header>
                                 <Label Content="Income" HorizontalContentAlignment="Center" Background="{StaticResource EXPDarkBlueBrush}" Margin="10,0"/>
                             </HeaderedContentControl.Header>
